--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "PORT=5000 node ./bin/www",
     "dev": "concurrently \"PORT=5000 nodemon ./bin/www\" \"npm start --prefix dev-front\""
   },
   "dependencies": {
